src/test/ui/parser/parser-recovery-2.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/parser-recovery-2.rs:6:5
   |
LL |     fn bar() {
   |              - unmatched opening delimiter begins here
LL |         let x = foo();
LL |     )
   |     ^ mismatched closing delimiter

error: unexpected token: `;`
  --> $DIR/parser-recovery-2.rs:10:15
   |
LL |     let x = y.;
   |               ^

error[E0425]: cannot find value `y` in this scope
  --> $DIR/parser-recovery-2.rs:10:13
   |
LL |     let x = y.;
   |             ^ not found in this scope

error[E0425]: cannot find function `foo` in this scope
  --> $DIR/parser-recovery-2.rs:5:17
   |
LL |         let x = foo();
   |                 ^^^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
